# wradlib

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.txt  LICENSE  LICENSE-CC-BY-SA-4.0  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  distribute.cmd  distribute_setup.py  environment.yml  ez_setup.py  pyproject.toml  radproc.py  requirements.txt  requirements_devel.txt  requirements_docs.txt  requirements_optional.txt  runtests.py  setup.cfg  setup.py  setup_distutils.py  test1.h5  testrunner.py  wradlib_package_workdoc.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cancel.yml  ci.yml  main.yml  trigger_rtd.yml
ci/azure/: add-conda-to-path.yml  install.yml  notebook-tests.yml  unit-tests.yml
ci/requirements/: notebooktests.txt  notebooktests.yml  py38-notebooks.yml  py38.yml  py39-notebooks.yml  py39.yml  readthedocs.yml  unittests.txt  unittests.yml
ci/travis/: install.sh
doc/: Makefile  bibliography.md  conf.py  dev_guide.md  docker.md  ide.md  index.md  installation.md  jupyter.md  make-many.bat  make.bat  migration.md  reference.md  refs.bib  refs_links.bib  release_notes.md
doc/source/: adjust.rst  atten.rst  bufr.rst  clutter.rst  community.rst  comp.rst  conf.py  dev_setup.rst  dp.rst  fill.rst  georef.rst  gettingstarted.rst  ide.rst  index.rst  io.rst  ipol.rst  jupyter.rst  notebooks.rst  qual.rst  recipes.rst  reference.rst  refs.bib  refs_links.bib  release_notes.rst  team.rst  trafo.rst  tutorial_accumulation.rst  tutorial_attenuation.rst  tutorial_attenuation_correction.rst  tutorial_autoimages.rst  tutorial_clutter_correction.rst  tutorial_conversion.rst  tutorial_curvelinear_grids.rst  tutorial_georeferencing.rst  tutorial_get_rainfall.rst  tutorial_radolan_format.rst  tutorial_reading_dx.rst  tutorial_supported_formats.rst  tutorial_workflow.rst  tutorial_zonalstats.rst  (+8 more)
docs/: community.md  conf.py  dev_guide.md  docker.md  index.md  installation.md  jupyter.md  migration.md  refs.bib  release_notes.md  weblinks.md
docs/_static/: custom.css
docs/_templates/: layout.html
docs/notebooks/: __init__.py  conftest.py  overview.md
examples/: adjust_example.py  apichange_example.py  attenuation_correction_example.py  beamblock_example.py  bufr_decode_example.py  clutter_cloud_example.py  clutter_gabella_example.py  compose_by_height_example.py  coord.py  gdal_search_and_merge.py  generic_netcdf_example.py  georef_example.py  gis_export_example.py  histo_cut_example.py  ipol_example.py  load_radolan_example.py  load_rainbow.py  load_rainbow_example.py  overlay_example.py  plot_cg_ppi_example.py  plot_cg_rhi_example.py  plot_ppi_example.py  radolan_header_example.py  radolan_products_example.py  radolan_projection_example.py  radolan_quickstart_example.py  radolan_radarloc_example.py  read_volume_example.py  recipe1_clutter_attenuation_composition.py  recipe2_polar_volume_example.py  tutorial_get_rainfall.py  tutorial_spatial_matching.py  tutorial_zonal_statistics.py  tutorial_zonal_statistics_polar.py  typical_workflow.py  verify_example.py  vis_example.py  wrl_cg_plot_demo.py
examples/data/: 20130429043000.rad.bewid.pvol.dbzh.scan1.hdf  2013070308340000dBuZ.azi  SAFNWC_MSG3_CT___201304290415_BEL_________.h5  edge_netcdf.nc  knmi_polar_volume.h5  polar_rhi_dBZ_bonn.h5  raa00-dx_10908-0806021655-fbg---bin  raa00-dx_10908-0806021735-fbg---bin  raa00-dx_10908-0806021740-fbg---bin  raa00-dx_10908-0806021745-fbg---bin  raa00-dx_10908-200608281420-fbg---bin  rainsum_boxpol_20140609.h5  sample.dx  test.buf
examples/notebooks/: __init__.py  conftest.py  overview.md
notebooks/: __init__.py  basics.ipynb  classify.ipynb  develop.ipynb  fileio.ipynb  georeferencing.ipynb  learnpython.ipynb  radolan.ipynb  radolan_format.ipynb  radolan_grid.ipynb  radolan_network.ipynb  radolan_showcase.ipynb  recipe1.ipynb  recipe2.ipynb  recipes.ipynb  simple_plot.ipynb  wradlib_adjust_example.ipynb  wradlib_api_change.ipynb  wradlib_attenuation.ipynb  wradlib_beamblock.ipynb  wradlib_clutter_cloud_example.ipynb  wradlib_clutter_gabella_example.ipynb  wradlib_generic_netcdf_example.ipynb  wradlib_georef_example.ipynb  wradlib_get_rainfall.ipynb  wradlib_in_an_hour.ipynb  wradlib_introduction.ipynb  wradlib_overlay.ipynb  wradlib_plot_curvelinear_grids.ipynb  wradlib_radar_formats.ipynb  wradlib_workflow.ipynb  wradlib_zonalstats_example.ipynb
notebooks/attenuation/: wradlib_attenuation.ipynb
notebooks/basics/: wradlib_get_rainfall.ipynb  wradlib_introduction.ipynb  wradlib_workflow.ipynb
notebooks/beamblockage/: wradlib_beamblock.ipynb
notebooks/classify/: wradlib_clutter_cloud_example.ipynb  wradlib_clutter_gabella_example.ipynb  wradlib_fuzzy_echo_classify.ipynb  wradlib_histo_cut_example.ipynb
notebooks/develop/: wradlib_api_change.ipynb
notebooks/fileio/: wradlib_generic_netcdf_example.ipynb  wradlib_gis_export_example.ipynb  wradlib_load_rainbow_example.ipynb  wradlib_radar_formats.ipynb  wradlib_reading_dx.ipynb
notebooks/georeferencing/: wradlib_coords_example.ipynb  wradlib_georef_example.ipynb
notebooks/interpolation/: wradlib_ipol_example.ipynb
notebooks/match3d/: external.py  io_func.py  vis_func.py  wradlib_match_test.ipynb  wradlib_match_trmm_gpm.ipynb  wradlib_match_workflow.ipynb  wtraits.py
scripts/: build_doc.sh  build_docs.sh  build_order.sh  clone_doc.sh  convert_notebooks.sh  copy_notebooks.sh  deploy_doc.sh  deploy_pypi.sh  docker_run.sh  install.sh  install_docker.sh  install_testing.sh  process_notebooks.sh  render_notebooks.sh  run_tests.sh  run_tests_profile.sh  setup.sh  test.sh  testrunner.py  trigger_readthedocs.sh
src/: README.md  db.sqlite3  requierements.txt
wradlib/: __init__.py  adjust.py  atten.py  bufr.py  classify.py  clutter.py  comp.py  dp.py  fill.py  georef.py  io.py  ipol.py  qual.py  speedup.f  trafo.py  util.py  verify.py  vis.py  vpr.py  xarray.py  zonalstats.py  zr.py
(+279 files in other folders)
