[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "wradlib"
description = """wradlib - An Open Source Library for Weather Radar Data Processing"""
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    { name = "Kai Mühlbauer", email = "kmuehlbauer@wradlib.org" },
    { name = "Maik Heistermann", email = "heisterm@uni-potsdam.de" },
]
maintainers = [
    { name = "wradlib developers", email = "wradlib@wradlib.org" }
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["version", "dependencies", "optional-dependencies", "readme"]

[project.urls]
homepage = "https://wradlib.org"
documentation = "https://docs.wradlib.org/"
repository = "https://github.com/wradlib/wradlib"
changelog = "https://docs.wradlib.org/en/stable/release_notes.html"

[project.entry-points."xarray.backends"]
wradlib-cfradial1 = "wradlib.io.backends:CfRadial1BackendEntrypoint"
wradlib-cfradial2 = "wradlib.io.backends:CfRadial2BackendEntrypoint"
wradlib-furuno = "wradlib.io.backends:FurunoBackendEntrypoint"
wradlib-gamic = "wradlib.io.backends:GamicBackendEntrypoint"
wradlib-odim = "wradlib.io.backends:OdimBackendEntrypoint"
radolan = "wradlib.io.backends:RadolanBackendEntrypoint"
wradlib-iris = "wradlib.io.backends:IrisBackendEntrypoint"
wradlib-rainbow = "wradlib.io.backends:RainbowBackendEntrypoint"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content_type = "text/markdown" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements_devel.txt" }
opt = { file = "requirements_optional.txt" }

[tool.setuptools]
packages = ["wradlib"]

[tool.setuptools_scm]
write_to = "wradlib/version.py"
version_scheme = "release-branch-semver"
fallback_version = "999"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]

# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["wradlib"]
