[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "wradlib"
description = """wradlib - An Open Source Library for Weather Radar Data Processing"""
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    { name = "Kai Mühlbauer", email = "kmuehlbauer@wradlib.org" },
    { name = "Maik Heistermann", email = "heisterm@uni-potsdam.de" },
]
maintainers = [
    { name = "wradlib developers", email = "wradlib@wradlib.org" }
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["version", "dependencies", "optional-dependencies", "readme"]

[project.urls]
homepage = "https://wradlib.org"
documentation = "https://docs.wradlib.org/"
repository = "https://github.com/wradlib/wradlib"
changelog = "https://docs.wradlib.org/en/stable/release_notes.html"

[project.entry-points."xarray.backends"]
radolan = "wradlib.io.backends:RadolanBackendEntrypoint"

[tool.hatch.version]
source = "vcs"
fallback_version = "999"

[tool.hatch.build.targets.wheel]
packages = ["wradlib", "wradlib.georef", "wradlib.io", "wradlib.tests"]

[tool.hatch.build.targets.sdist]
include = [
    "/wradlib",
    "/wradlib/tests",
    "/docs",
    "/scripts",
    "/CITATION.cff",
    "/CONTRIBUTING.md",
    "/CONTRIBUTORS.txt",
    "/README.md",
    "/requirements.txt",
    "/requirements_devel.txt",
    "/requirements_optional.txt",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    {path = "README.md"},
]

[tool.hatch.version.raw-options]
version_scheme = "release-branch-semver"

[tool.hatch.build.hooks.vcs]
version-file = "wradlib/version.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements_devel.txt"]
opt = ["requirements_optional.txt"]

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "docs",
]

# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Flake8 Bugbear
    "B",
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["wradlib"]

[tool.pytest.ini_options]
minversion = "7"
testpaths = "wradlib/tests"
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"]
